# tribunal

./: .gitignore  LICENSE  Makefile  README.en.md  README.md  README.zh.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  design-decisions.md  rubric-schema.md
examples/: demo.py  rubric.yaml  submission_pass.json  submission_veto.json
src/tribunal/: __init__.py  cli.py
src/tribunal/agents/: __init__.py  llm_client.py  orchestrator.py  prompts.py  reviewer.py  scorer.py
src/tribunal/domain/: __init__.py  assessment.py  rubric.py  submission.py
src/tribunal/hitl/: __init__.py  escalation.py
src/tribunal/pipeline/: __init__.py  extractors.py  runner.py
src/tribunal/rubric/: __init__.py  grade_bands.py  loader.py
src/tribunal/validation/: __init__.py  rules.py  validator.py
tests/: conftest.py  test_grade_bands.py  test_orchestrator.py  test_pipeline.py  test_transmission.py  test_validator.py  test_veto_rules.py
