[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tribunal"
version = "0.1.0"
description = "Multi-agent LLM document assessment with deterministic arbitration and human-in-the-loop escalation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "awsl5714" }]
keywords = ["llm", "multi-agent", "gpt", "claude", "rubric", "evaluation", "human-in-the-loop"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0", "anthropic>=0.39"]
extract = ["pypdf>=4.0", "python-docx>=1.1", "openpyxl>=3.1"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "mypy>=1.11", "types-PyYAML"]

[project.scripts]
tribunal = "tribunal.cli:main"

[project.urls]
Homepage = "https://github.com/awsl5714/tribunal"
Issues = "https://github.com/awsl5714/tribunal/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
